--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ h3{
 <a href="hobbies.html">🎨 MY HOBBIES</a><br/>
 <a href="contact.html">💌 CONTACT ME</a><br/>
 <a href="qgis2web.html">🌍 QGIS MAP</a><br/>
-<a href="GEE.html">🌎 GEE MAP</a><br/>
+<a href="GEE.html">🌱 GEE MAP</a><br/>
 
 
 
